<resources>
    <string name="app_name">CarBlueTooth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_up">UP</string>
    <string name="button_down">DOWN</string>
    <string name="button_left">LEFT</string>
    <string name="button_right">RIGHT</string>
    <string name="button_connectbluetooth">ConnectBlueTooth</string>
</resources>
