<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

    <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation"
    />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="87dp"
            tools:layout_editor_absoluteX="250dp">
        <Button
                android:text="@string/button_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button7" />
        <Button
                android:text="@string/button_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button8"/>
        <Button
                android:text="@string/button_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button9"/>
        <Button
                android:text="@string/button_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button10"/>
        <Button
                android:text="@string/button_connectbluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button11"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:onClick="ConnectBlueToot"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>